--- a/MyKanbanBoard/Views/MainWindow.xaml
+++ b/MyKanbanBoard/Views/MainWindow.xaml
@@ -38,15 +38,21 @@
 
                             <ListBox ItemsSource="{Binding Tasks}"
                                      AllowDrop="True"
-                                     PreviewMouseMove="Task_PreviewMouseMove"
+
                                      Drop="Task_Drop">
+                                
+                                
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
                                         <Border Background="White"
                                                 Padding="10"
                                                 Margin="0 0 0 5"
-                                                CornerRadius="4">
+                                                CornerRadius="4"
+                                                MouseMove="Task_MouseMove">
+                                            
+                                            
                                             <TextBlock Text="{Binding Title}"/>
+                                            
                                         </Border>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
