--- a/MyKanbanBoard/Views/MainWindow.xaml
+++ b/MyKanbanBoard/Views/MainWindow.xaml
@@ -4,64 +4,126 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyKanbanBoard"
+        xmlns:enums="clr-namespace:MyKanbanBoard.Models"
         xmlns:vm="clr-namespace:MyKanbanBoard.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow"
+        Height="450"
+        Width="800">
 
     <Window.DataContext>
-        <vm:BoardViewModel/>
+        <vm:BoardViewModel />
     </Window.DataContext>
 
-    <!--<Grid>
-    </Grid>-->
-
-    <ScrollViewer HorizontalScrollBarVisibility="Auto">
-        <ItemsControl ItemsSource="{Binding Columns}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Rows="1"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ItemsControl ItemsSource="{Binding Stories}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border Background="#F3F3F3"
-                            Margin="10"
-                            Padding="10"
-                            CornerRadius="6"
-                            AllowDrop="True"
-                            Drop="Column_Drop">
 
-                        <StackPanel>
-                            <TextBlock Text="{Binding Title}"
-                                       FontSize="16"
-                                       FontWeight="Bold"
-                                       Margin="0,0,01,0"/>
+                    <Expander IsExpanded="{Binding IsExpanded}" Margin="10">
+                        <Expander.Header>
+                            <TextBlock Text="{Binding Title}" FontSize="16" FontWeight="Bold"/>
+                        </Expander.Header>
 
-                            <ListBox ItemsSource="{Binding Tasks}">
-                                <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <Border Background="White"
-                                                Padding="10"
-                                                Margin="0 0 0 5"
-                                                CornerRadius="4"
-                                                MouseMove="Task_MouseMove">
-                                            
-                                            
-                                            <TextBlock Text="{Binding Title}"/>
-                                            
-                                        </Border>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                                
-                            </ListBox>
-                        </StackPanel>
-                        
-                    </Border>
+                        <!-- Wiersz: 4 kolumny statusów -->
+                        <Grid Margin="0,10,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- TO DO -->
+                            <Border Grid.Column="0" Margin="5" Padding="8" Background="#F3F3F3"
+                                    AllowDrop="True"
+                                    Drop="Cell_Drop"
+                                    Tag="{x:Static enums:TaskStatus.ToDo}">
+                                <StackPanel>
+                                    <TextBlock Text="To Do" FontWeight="Bold" Margin="0,0,0,6"/>
+                                    <ItemsControl ItemsSource="{Binding ToDoView}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Background="White" Padding="10" Margin="0,0,0,5"
+                                                        CornerRadius="4"
+                                                        MouseMove="Task_MouseMove">
+                                                    <TextBlock Text="{Binding Title}"/>
+                                                </Border>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Border>
+
+                            <!-- ACTIVE -->
+                            <Border Grid.Column="1" Margin="5" Padding="8" Background="#F3F3F3"
+                                    AllowDrop="True"
+                                    Drop="Cell_Drop"
+                                    Tag="{x:Static enums:TaskStatus.Active}">
+                                <StackPanel>
+                                    <TextBlock Text="Active" FontWeight="Bold" Margin="0,0,0,6"/>
+                                    <ItemsControl ItemsSource="{Binding ActiveView}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Background="White" Padding="10" Margin="0,0,0,5"
+                                                        CornerRadius="4"
+                                                        MouseMove="Task_MouseMove">
+                                                    <TextBlock Text="{Binding Title}"/>
+                                                </Border>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Border>
+
+                            <!-- PAUSED -->
+                            <Border Grid.Column="2" Margin="5" Padding="8" Background="#F3F3F3"
+                                    AllowDrop="True"
+                                    Drop="Cell_Drop"
+                                    Tag="{x:Static enums:TaskStatus.Paused}">
+                                <StackPanel>
+                                    <TextBlock Text="Paused" FontWeight="Bold" Margin="0,0,0,6"/>
+                                    <ItemsControl ItemsSource="{Binding PausedView}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Background="White" Padding="10" Margin="0,0,0,5"
+                                                        CornerRadius="4"
+                                                        MouseMove="Task_MouseMove">
+                                                    <TextBlock Text="{Binding Title}"/>
+                                                </Border>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Border>
+
+                            <!-- DONE -->
+                            <Border Grid.Column="3" Margin="5" Padding="8" Background="#F3F3F3"
+                                    AllowDrop="True"
+                                    Drop="Cell_Drop"
+                                    Tag="{x:Static enums:TaskStatus.Done}">
+                                <StackPanel>
+                                    <TextBlock Text="Done" FontWeight="Bold" Margin="0,0,0,6"/>
+                                    <ItemsControl ItemsSource="{Binding DoneView}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Background="White" Padding="10" Margin="0,0,0,5"
+                                                        CornerRadius="4"
+                                                        MouseMove="Task_MouseMove">
+                                                    <TextBlock Text="{Binding Title}"/>
+                                                </Border>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Border>
+                        </Grid>
+
+                    </Expander>
+
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-            
         </ItemsControl>
     </ScrollViewer>
-    
+
 </Window>
